refactor: migrate from PyQt5 to PySide6
Update all Qt-related code to use PySide6 instead of PyQt5 for
better compatibility and licensing.

Changes:
- Update pyproject.toml dependencies
- Update install.sh to install python3-pyside6 packages
- Update justfile test commands to use PySide6 imports
- Update core/notification_handler.py imports
- Update ui/wpm_graph.py imports
- TrayIcon was already migrated in previous commit

PySide6 provides the same API with better Python 3.10+ support
and more permissive licensing (LGPL vs GPL).

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,15 +6,20 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "pydantic>=2.0",
-    "PyQt5",
+    "PySide6",
     "pandas",
+    "matplotlib",
+    "evdev",
 ]
+
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools.packages.find]
+include = ["core*", "ui*", "utils*"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 pythonpath = ["."]
 addopts = "-v"
-
-[build-system]
-requires = ["setuptools>=61.0"]
-build-backend = "setuptools.build_meta"
